# hive

./: Cargo.toml  README.md
src/: bot.rs  bot_matecount.rs  game.rs  hive.rs  lib.rs  main.rs  main_reversi.rs  model_reversi.rs  render.rs  small_arrayvec.rs
src/bot/: mcts.rs  minimax.rs
