[package]
name = "bot"
version = "0.1.0"
authors = ["philip"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
arrayvec = "0.7.2"
enum-map = "2.4.0"

[profile.release]
lto = "thin"
panic = "abort"
# codegen-units = 1
# debug = 1
